nvim/.config/nvim/tree-sitter-envspec/test/corpus/basics.txt
================================================================================
Simple key=value
================================================================================

FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
No value (undefined)
================================================================================

UNDEF=

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)))

================================================================================
Empty string value
================================================================================

EMPTY=""

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (double_quoted_string))))

================================================================================
Double-quoted value with spaces
================================================================================

DQUOTE="hello world"

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (double_quoted_string))))

================================================================================
Single-quoted value
================================================================================

SQUOTE='hi'

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (single_quoted_string))))

================================================================================
Backtick-quoted value
================================================================================

BTICK=`there`

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (backtick_quoted_string))))

================================================================================
Unquoted value
================================================================================

UNQUOTED=hello_world

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Triple-backtick multiline string
================================================================================

ML=```
line one
line two
```

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (multiline_string
      (triple_backtick_string))))

================================================================================
Plain comment block before config item
================================================================================

# this is a plain comment
FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (plain_comment))
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Decorator comment block before config item
================================================================================

# @required
FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (decorator_comment))
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Decorator comment with value
================================================================================

# @type=string
FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (decorator_comment))
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Multiple decorators on one line
================================================================================

# @required @type=string
FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (decorator_comment))
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Bare function-call decorator
================================================================================

# @import(../path)
FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (decorator_comment))
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Divider with dashes
================================================================================

# ---

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (divider)
  (blank_line))

================================================================================
Divider with equals signs
================================================================================

# ===

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (divider)
  (blank_line))

================================================================================
Divider with trailing text
================================================================================

# --- section title ---

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (divider)
  (blank_line))

================================================================================
Post-value decorator comment
================================================================================

FOO=bar # @secret

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string)
    post_comment: (decorator_comment)))

================================================================================
JSDoc-style decorator treated as decorator_comment token
================================================================================

# @see https://example.com info
FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (decorator_comment))
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Export prefix
================================================================================

export FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    (export_keyword)
    key: (key)
    value: (unquoted_string)))

================================================================================
Bracketed string expansion in double-quoted value
================================================================================

URL="${BASE_URL}/api"

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (double_quoted_string
        (expansion
          name: (identifier))))))

================================================================================
Simple $VAR expansion in double-quoted value
================================================================================

REF="$SIMPLE"

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (double_quoted_string
        (expansion
          name: (identifier))))))

================================================================================
Fallback expansion in double-quoted value
================================================================================

FB="${VAR:-default}"

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (double_quoted_string
        (expansion
          name: (identifier))))))

================================================================================
Document header with decorator comment and divider
================================================================================

# @version=1.0
# ---
FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (decorator_comment))
  (divider)
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Standalone comment block separated by blank line
================================================================================

# standalone block

FOO=bar

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (comment_block
    line: (plain_comment))
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Multiple consecutive config items
================================================================================

FOO=bar
BAR=baz

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string))
  (config_item
    key: (key)
    value: (unquoted_string)))

================================================================================
Escape sequence in double-quoted string
================================================================================

ESC="escaped\"quote"

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (quoted_string
      (double_quoted_string
        (escape_sequence)))))

================================================================================
Blank line between config items
================================================================================

FOO=bar

BAR=baz

--------------------------------------------------------------------------------

(source_file
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string))
  (blank_line)
  (config_item
    key: (key)
    value: (unquoted_string)))
